--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# manualmente adicionado
+main.ipynb
+*.xlsx 
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -25,7 +29,7 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
-main.ipynb
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
